--- a/styles/Icon.scss
+++ b/styles/Icon.scss
@@ -7,13 +7,4 @@
   text-align: center;
   display: inline-block;
   position: relative;
-  vertical-align: bottom;
-  &::before {
-    line-height: 1em;
-    width: 1em;
-    height: 1em;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
 }
